[package]
name = "three_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.55"
nalgebra-glm = "0.15.0"
regex = "1"
wasm-bindgen = "0.2.78"

[dev-dependencies]
headless_chrome = "0.9"
command-group = "1.0.8"
log = "0.4.14"
log4rs = "1.0"
serde_json = "1.0.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window",
  "XrSession",
  "XrWebGlLayer"
]
